adt-sdl/src/main/java/data/modeling/adt/sdl/antlr4/AdtSdlParser.java
// Generated from /Users/sbardavid/IdeaProjects/test/adt-sdl/src/main/resources/AdtSdl.g4 by ANTLR 4.12.0
package data.modeling.adt.sdl.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AdtSdlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, ENTITY=7, RELATIONSHIP=8, 
		ANNO=9, SET=10, IMPORT=11, TO=12, ENUM=13, UNION=14, MODIFY=15, TYPE=16, 
		ANYOF=17, ALLOF=18, DTO=19, EXTENDS=20, REMOVE=21, RENAME=22, DEFINE=23, 
		OVERRIDE=24, CONTEXT=25, LBRACE=26, RBRACE=27, COLON=28, EQ=29, FALSE=30, 
		TRUE=31, IDENTIFIER=32, STRING=33, NUMBER=34, LINE_COMMENT=35, BLOCK_COMMENT=36, 
		WS=37;
	public static final int
		RULE_schema = 0, RULE_definitions = 1, RULE_statement = 2, RULE_contextStatement = 3, 
		RULE_importStatement = 4, RULE_setDefinitionStatement = 5, RULE_allOfDefinitionStatement = 6, 
		RULE_anyOfDefinitionStatement = 7, RULE_typeDefinitionStatement = 8, RULE_unionDefinitionStatement = 9, 
		RULE_enumDefinitionStatement = 10, RULE_entityDefinitionStatement = 11, 
		RULE_modificationStatement = 12, RULE_removeStatement = 13, RULE_renameStatement = 14, 
		RULE_removeFieldStatement = 15, RULE_renameFieldStatement = 16, RULE_overrideFieldStatement = 17, 
		RULE_defineFieldStatement = 18, RULE_setDefinition = 19, RULE_fieldDefinition = 20, 
		RULE_unionDefinitions = 21, RULE_enumDefinition = 22, RULE_extendsTypeList = 23, 
		RULE_extends = 24, RULE_schemaPipelines = 25, RULE_override = 26, RULE_define = 27, 
		RULE_rename = 28, RULE_remove = 29, RULE_location = 30, RULE_value = 31, 
		RULE_annotations = 32, RULE_annotation = 33, RULE_annotationArgs = 34, 
		RULE_annotationArg = 35, RULE_contextRenameCall = 36, RULE_contextRenameCallArgs = 37, 
		RULE_contextRenameCallArg = 38, RULE_label = 39, RULE_pipeName = 40, RULE_newFieldName = 41, 
		RULE_labelList = 42, RULE_labelSetList = 43, RULE_typeName = 44, RULE_complexTypeName = 45, 
		RULE_complexTypeNameArg = 46, RULE_complexTypeNameArgs = 47, RULE_relationshipTypeName = 48, 
		RULE_relationshipArg = 49, RULE_relationshipArgs = 50, RULE_allTypeNames = 51, 
		RULE_newtypeName = 52, RULE_boolean = 53, RULE_number = 54, RULE_string = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"schema", "definitions", "statement", "contextStatement", "importStatement", 
			"setDefinitionStatement", "allOfDefinitionStatement", "anyOfDefinitionStatement", 
			"typeDefinitionStatement", "unionDefinitionStatement", "enumDefinitionStatement", 
			"entityDefinitionStatement", "modificationStatement", "removeStatement", 
			"renameStatement", "removeFieldStatement", "renameFieldStatement", "overrideFieldStatement", 
			"defineFieldStatement", "setDefinition", "fieldDefinition", "unionDefinitions", 
			"enumDefinition", "extendsTypeList", "extends", "schemaPipelines", "override", 
			"define", "rename", "remove", "location", "value", "annotations", "annotation", 
			"annotationArgs", "annotationArg", "contextRenameCall", "contextRenameCallArgs", 
			"contextRenameCallArg", "label", "pipeName", "newFieldName", "labelList", 
			"labelSetList", "typeName", "complexTypeName", "complexTypeNameArg", 
			"complexTypeNameArgs", "relationshipTypeName", "relationshipArg", "relationshipArgs", 
			"allTypeNames", "newtypeName", "boolean", "number", "string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'|'", "','", "'>'", "'('", "')'", "'.'", "'entity'", "'relationship'", 
			"'@'", "'set'", "'import'", "'to'", "'enum'", "'union'", "'modify'", 
			"'type'", "'anyOf'", "'allOf'", "'dto'", "'extends'", "'remove'", "'rename'", 
			"'define'", "'override'", "'context'", "'{'", "'}'", "':'", "'='", "'false'", 
			"'true'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "ENTITY", "RELATIONSHIP", "ANNO", 
			"SET", "IMPORT", "TO", "ENUM", "UNION", "MODIFY", "TYPE", "ANYOF", "ALLOF", 
			"DTO", "EXTENDS", "REMOVE", "RENAME", "DEFINE", "OVERRIDE", "CONTEXT", 
			"LBRACE", "RBRACE", "COLON", "EQ", "FALSE", "TRUE", "IDENTIFIER", "STRING", 
			"NUMBER", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AdtSdl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AdtSdlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SchemaContext extends ParserRuleContext {
		public List<DefinitionsContext> definitions() {
			return getRuleContexts(DefinitionsContext.class);
		}
		public DefinitionsContext definitions(int i) {
			return getRuleContext(DefinitionsContext.class,i);
		}
		public SchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).enterSchema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).exitSchema(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdtSdlVisitor ) return ((AdtSdlVisitor<? extends T>)visitor).visitSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaContext schema() throws RecognitionException {
		SchemaContext _localctx = new SchemaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_schema);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(112);
				definitions();
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 39972480L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionsContext extends ParserRuleContext {
		public SetDefinitionStatementContext setDefinitionStatement() {
			return getRuleContext(SetDefinitionStatementContext.class,0);
		}
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode EOF() { return getToken(AdtSdlParser.EOF, 0); }
		public List<ContextStatementContext> contextStatement() {
			return getRuleContexts(ContextStatementContext.class);
		}
		public ContextStatementContext contextStatement(int i) {
			return getRuleContext(ContextStatementContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).enterDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).exitDefinitions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdtSdlVisitor ) return ((AdtSdlVisitor<? extends T>)visitor).visitDefinitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		int _la;
		try {
			int _alt;
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				setDefinitionStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(118);
						importStatement();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(121); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(124); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(123);
						statement();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(126); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(128);
					contextStatement();
					}
					}
					setState(131); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CONTEXT );
				setState(133);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public SetDefinitionStatementContext setDefinitionStatement() {
			return getRuleContext(SetDefinitionStatementContext.class,0);
		}
		public TypeDefinitionStatementContext typeDefinitionStatement() {
			return getRuleContext(TypeDefinitionStatementContext.class,0);
		}
		public EntityDefinitionStatementContext entityDefinitionStatement() {
			return getRuleContext(EntityDefinitionStatementContext.class,0);
		}
		public UnionDefinitionStatementContext unionDefinitionStatement() {
			return getRuleContext(UnionDefinitionStatementContext.class,0);
		}
		public EnumDefinitionStatementContext enumDefinitionStatement() {
			return getRuleContext(EnumDefinitionStatementContext.class,0);
		}
		public ModificationStatementContext modificationStatement() {
			return getRuleContext(ModificationStatementContext.class,0);
		}
		public RemoveStatementContext removeStatement() {
			return getRuleContext(RemoveStatementContext.class,0);
		}
		public RenameStatementContext renameStatement() {
			return getRuleContext(RenameStatementContext.class,0);
		}
		public RenameFieldStatementContext renameFieldStatement() {
			return getRuleContext(RenameFieldStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdtSdlVisitor ) return ((AdtSdlVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				importStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				setDefinitionStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				typeDefinitionStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(140);
				entityDefinitionStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(141);
				unionDefinitionStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(142);
				enumDefinitionStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(143);
				modificationStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(144);
				removeStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(145);
				renameStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(146);
				renameFieldStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContextStatementContext extends ParserRuleContext {
		public TerminalNode CONTEXT() { return getToken(AdtSdlParser.CONTEXT, 0); }
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(AdtSdlParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AdtSdlParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ContextRenameCallContext contextRenameCall() {
			return getRuleContext(ContextRenameCallContext.class,0);
		}
		public ContextStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contextStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).enterContextStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).exitContextStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdtSdlVisitor ) return ((AdtSdlVisitor<? extends T>)visitor).visitContextStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContextStatementContext contextStatement() throws RecognitionException {
		ContextStatementContext _localctx = new ContextStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_contextStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(CONTEXT);
			setState(150);
			label();
			setState(151);
			match(LBRACE);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6418048L) != 0)) {
				{
				{
				setState(152);
				statement();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(RBRACE);
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RENAME) {
				{
				setState(159);
				contextRenameCall();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AdtSdlParser.IMPORT, 0); }
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public SchemaPipelinesContext schemaPipelines() {
			return getRuleContext(SchemaPipelinesContext.class,0);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdtSdlVisitor ) return ((AdtSdlVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(IMPORT);
			setState(163);
			label();
			setState(164);
			location();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(165);
				schemaPipelines();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetDefinitionStatementContext extends ParserRuleContext {
		public List<SetDefinitionContext> setDefinition() {
			return getRuleContexts(SetDefinitionContext.class);
		}
		public SetDefinitionContext setDefinition(int i) {
			return getRuleContext(SetDefinitionContext.class,i);
		}
		public SetDefinitionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setDefinitionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).enterSetDefinitionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).exitSetDefinitionStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdtSdlVisitor ) return ((AdtSdlVisitor<? extends T>)visitor).visitSetDefinitionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetDefinitionStatementContext setDefinitionStatement() throws RecognitionException {
		SetDefinitionStatementContext _localctx = new SetDefinitionStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_setDefinitionStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(169); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(168);
					setDefinition();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(171); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AllOfDefinitionStatementContext extends ParserRuleContext {
		public AnnotationsContext annotations() {
			return getRuleContext(AnnotationsContext.class,0);
		}
		public TerminalNode ALLOF() { return getToken(AdtSdlParser.ALLOF, 0); }
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public ExtendsContext extends_() {
			return getRuleContext(ExtendsContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(AdtSdlParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AdtSdlParser.RBRACE, 0); }
		public List<FieldDefinitionContext> fieldDefinition() {
			return getRuleContexts(FieldDefinitionContext.class);
		}
		public FieldDefinitionContext fieldDefinition(int i) {
			return getRuleContext(FieldDefinitionContext.class,i);
		}
		public AllOfDefinitionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allOfDefinitionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).enterAllOfDefinitionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).exitAllOfDefinitionStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdtSdlVisitor ) return ((AdtSdlVisitor<? extends T>)visitor).visitAllOfDefinitionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllOfDefinitionStatementContext allOfDefinitionStatement() throws RecognitionException {
		AllOfDefinitionStatementContext _localctx = new AllOfDefinitionStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_allOfDefinitionStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			annotations();
			setState(174);
			match(ALLOF);
			setState(175);
			typeName();
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(176);
				extends_();
				}
			}

			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(179);
				match(LBRACE);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ANNO || _la==IDENTIFIER) {
					{
					{
					setState(180);
					fieldDefinition();
					}
					}
					setState(185);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(186);
				match(RBRACE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnyOfDefinitionStatementContext extends ParserRuleContext {
		public AnnotationsContext annotations() {
			return getRuleContext(AnnotationsContext.class,0);
		}
		public TerminalNode ANYOF() { return getToken(AdtSdlParser.ANYOF, 0); }
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public ExtendsContext extends_() {
			return getRuleContext(ExtendsContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(AdtSdlParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AdtSdlParser.RBRACE, 0); }
		public List<FieldDefinitionContext> fieldDefinition() {
			return getRuleContexts(FieldDefinitionContext.class);
		}
		public FieldDefinitionContext fieldDefinition(int i) {
			return getRuleContext(FieldDefinitionContext.class,i);
		}
		public AnyOfDefinitionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyOfDefinitionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).enterAnyOfDefinitionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AdtSdlListener ) ((AdtSdlListener)listener).exitAnyOfDefinitionStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AdtSdlVisitor ) return ((AdtSdlVisitor<? extends T>)visitor).visitAnyOfDefinitionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnyOfDefinitionStatementContext anyOfDefinitionStatement() throws RecognitionException {
		AnyOfDefinitionStatementContext _localctx = new AnyOfDefinitionStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_anyOfDefinitionStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			annotations();
			setState(190);
			match(ANYOF);
			setState(191);
			typeName();
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(192);
				extends_();
				}
			}
